kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contoso-renderer
  labels:
    app: contoso-renderer
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
  selector:
    app: contoso-renderer
  type: ClusterIP
