kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: contoso-renderer
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: contoso.!DNS!
      http:
        paths:
          - backend:
              serviceName: contoso-renderer
              servicePort: http
            path: /
